<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ls="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_height="wrap_content"
                android:layout_width = "match_parent"
                android:gravity="right"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <com.flashphoner.fpwcsapi.layout.PercentFrameLayout
                        android:id="@+id/local_video_layout"
                        android:layout_width="match_parent"
                        android:layout_height="190dp">

                        <com.flashphoner.fpwcsapi.FPSurfaceViewRenderer
                            android:id="@+id/local_video_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </com.flashphoner.fpwcsapi.layout.PercentFrameLayout>

                    <TextView
                        android:id="@+id/local_resolution"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceSmall"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <com.flashphoner.fpwcsapi.layout.PercentFrameLayout
                        android:id="@+id/remote_video_layout"
                        android:layout_width="match_parent"
                        android:layout_height="190dp">


                        <com.flashphoner.fpwcsapi.FPSurfaceViewRenderer
                            android:id="@+id/remote_video_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </com.flashphoner.fpwcsapi.layout.PercentFrameLayout>

                    <TextView
                        android:id="@+id/remote_resolution"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:text=""
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/wcs_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_wcs_url"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:text="@string/wcs_url" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/stream_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_stream_name"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:text="@string/stream_name" />

            </android.support.design.widget.TextInputLayout>

            <com.satsuware.usefulviews.LabelledSpinner
                android:id="@+id/camera_capturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ls:labelText="Camera capturer"
                ls:spinnerEntries="@array/camera_capturer"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/camera_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_camera_width"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:text="@string/camera_width" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/camera_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_camera_height"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:text="@string/camera_height" />

            </android.support.design.widget.TextInputLayout>

            <SeekBar
                android:id="@+id/zoom_seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zoom"/>

            <CheckBox
                android:id="@+id/use_filter"
                android:checked="true"
                android:text="@string/use_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/use_png_overlay"
                android:checked="true"
                android:text="@string/use_png_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/png_x_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_png_x_position"
                    android:maxLines="1"
                    android:maxLength="4"
                    android:text="@string/png_x_position"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/png_y_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_png_y_position"
                    android:maxLines="1"
                    android:maxLength="4"
                    android:text="@string/png_y_position"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/png_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_png_width"
                    android:maxLines="1"
                    android:maxLength="4"
                    android:text="@string/png_width"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/png_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_png_height"
                    android:maxLines="1"
                    android:maxLength="4"
                    android:text="@string/png_height"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/select_png_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/select_png"
                android:textStyle="bold" />


            <Button
                android:id="@+id/connect_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_start"
                android:textStyle="bold" />

            <Button
                android:id="@+id/switch_flashlight_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/turn_on_flashlight"
                android:enabled="false"
                android:textStyle="bold"  />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>